@@ -25,8 +25,9 @@ Mejorado Snapshots en RAM:
 
 Mejorado ZX Vision:
 - Agregado nuevo Menú Superior (no habilitado por defecto)
-- Reordenadas opciones & nuevo menú: revisa opciones -> Display Emulado, General, Ventana Principal, ZX Vision
+- Reordenadas opciones & nuevo menú: revisa opciones -> Display Emulado, General, Ventana Principal, ZX Vision, TV
 - Agregada acción al ayudante de atajos para crear icono que lanza las teclas grabadas
+- Algunos diálogos de ajustes pueden resetearse a valores por defecto
 - Ventanas restauradas al inicio como maximizadas, se restaurarán al tamaño máximo disponible
 
 Mejorado ZX Desktop:
