@@ -101,6 +101,9 @@ quiza es que al grabar, la señal de vsync "artificial" (generada de sacar los 0
 *si se activa nmi o maskable, que se ejecute en el siguiente step
 
 
+-Listado de juegos a comprobar en ZX80 y ZX81, meterlo en los scripts de test:
+-ZX80: la mayoria
+-ZX81: mazogs, 3dmonster maze, y los de hires: pseudo (manic, pacman), udg, wrx, chr$
 -starfigh.81 creo que es muy sensible a timings, si la nmi tarda mas, va muy lento
 
 
@@ -116,3 +119,4 @@ seguro de que alguna vez se salga de rango y genere segfault)
 
 -ARX hires extension? https://k1.spdns.de/Vintage/Sinclair/80/Doityourself/ARX%20hires%20extension/
 
+-Poder resetear settings por defecto, en especial TV por ejemplo
