@@ -1109,8 +1109,9 @@ extern int menu_dibuja_menu_recorrer_menus;
 extern int menu_dibuja_menu_recorrer_menus_entrado_submenu;
 
 extern int menu_ventana_scanf(char *titulo,char *texto,int max_length);
-extern int menu_ventana_scanf_numero(char *titulo,char *texto,int max_length,int incremento,int minimo,int maximo,int circular);
+extern int menu_ventana_scanf_numero(char *titulo,char *texto,int max_length,int incremento,int minimo,int maximo,int circular,int *default_value);
 extern int menu_ventana_scanf_numero_enhanced(char *titulo,int *variable,int max_length,int incremento,int minimo,int maximo,int circular);
+extern int menu_ventana_scanf_numero_enhanced_default(char *titulo,int *variable,int max_length,int incremento,int minimo,int maximo,int circular,int default_value);
 extern int zxvision_menu_filesel(char *titulo,char *filtros[],char *archivo);
 //extern char menu_filesel_last_directory_seen[];
 
